objects/Document_Generation_API_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>API_Base_URL__c</fullName>
        <inlineHelpText>Base URL to the docgen server</inlineHelpText>
        <label>API Base URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_PWD__c</fullName>
        <inlineHelpText>Authentication for the docgen server</inlineHelpText>
        <label>API PWD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Username__c</fullName>
        <inlineHelpText>Authentication for the docgen server</inlineHelpText>
        <label>API Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>These settings will only be considered when is this field is checked. The functionality will throw an error if more than one is checked at any given time</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SF_Webhook_Token__c</fullName>
        <inlineHelpText>Token which needs to be provided when calling Salesforce's Document Generation webhook</inlineHelpText>
        <label>SF Webhook Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Document Generation API Setting</label>
    <pluralLabel>Document Generation API Settings</pluralLabel>
</CustomObject>